--- a/홈페이지.html
+++ b/홈페이지.html
@@ -8,27 +8,47 @@
     <link rel="stylesheet" href="홈페이지.css">
 </head>
 <body>
+    
     <div class="header-container">
-        <h4 class="title">Nexon Stories</h4>
-        <h5 class="Information1">Game</h5>
-        <h5 class="Information2">History</h5>
-        <h5 class="Information3">Producer</h5>
-        <h5 class="Information4">Finance</h5>
+    <h4 class="title position-left" data-left="10%">Nexon Stories</h4>
+    <h5 class=" position-left" data-left="60%">Game</h5>
+    <h5 class=" position-left" data-left="68%">History</h5>
+    <h5 class=" position-left" data-left="76%">Producer</h5>
+    <h5 class=" position-left" data-left="84%">Finance</h5>
+</div>
+
+    <div class="slideshow-container">
+    <div id="slideshow1">
+        <img src="https://dszw1qtcnsa5e.cloudfront.net/community/20230712/b1557d98-7a6a-4d2f-8efe-07e6fe42fa34/%ED%8F%AC%EB%9F%BC%EB%B0%B0%EB%84%88%EC%B9%B4%ED%8A%B8%EB%9D%BC%EC%9D%B4%EB%8D%94.jpg" class="active" alt="Image 1">
+        <img src="https://dszw1qtcnsa5e.cloudfront.net/community/20230509/c7948b30-0b88-45bf-a787-a30d5093a0e1/%EC%95%84%EC%9D%B4%ED%85%9C%EC%A0%84%EC%9A%B0%EC%A3%BC%EC%84%A0.png" alt="Image 2">
+        <img src="https://cdnweb01.wikitree.co.kr/webdata/editor/202301/13/img_20230113075933_92830570.webp" alt="Image 3">
+        <img src="https://i.namu.wiki/i/rTLjjZd1RQULJ55OkjACt3nZjVXnbzmk3mqiPN6bkFbYtLo8NMYxouQ0aqN4e_qmmiNYCOIbGSvO6rImt9siCQ.webp" alt="Image 4">
+        <img src="https://dszw1qtcnsa5e.cloudfront.net/community/20240319/f34757d7-9838-4bf7-852e-3f226783e022/image2024031915593230.png" alt="Image 5">
     </div>
     
-    <div class="slideshow-container">
-        <div class="slide">
-            <img src="https://i2n.news1.kr/system/photos/2024/3/14/6533941/article.jpg" alt="Image 1">
-        </div>
-        <div class="slide">
-            <img src="image2.jpg" alt="Image 2">
-        </div>
-        <div class="slide">
-            <img src="image3.jpg" alt="Image 3">
-        </div>
-        <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
-        <a class="next" onclick="changeSlide(1)">&#10095;</a>
+    <div id="slideshow2">
+        <img src="https://dszw1qtcnsa5e.cloudfront.net/community/20231220/30fea66c-fa95-480e-957c-6e94105421f4/750x522.png" class="active" alt="Image 1">
+        <img src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F5686%2F2024%2F06%2F05%2F0000128914_001_20240605111212186.jpg&type=sc960_832" alt="Image 2">
+        <img src="https://cdn-www.bluestacks.com/bs-images/1e4d1d9936552827eb61609f20d8151e-2.png" alt="Image 3">
+        <img src="https://dszw1qtcnsa5e.cloudfront.net/community/20240619/e91887fd-18d7-4d47-908f-244effb15aa3/%EB%AA%A8%EB%B0%94%EC%9D%BC750x522.png" alt="Image 4">
+        <img src="https://img4.daumcdn.net/thumb/R658x0.q70/?fname=https://t1.daumcdn.net/news/202406/08/HankyungGametoc/20240608201748401yboc.jpg" alt="Image 5">
     </div>
+    <div id="slideshow3">
+        <img src="https://i2n.news1.kr/system/photos/2024/3/14/6533941/article.jpg" class="active" alt="Image 1">
+        <img src="https://mblogthumb-phinf.pstatic.net/MjAyMDA0MTZfMTU4/MDAxNTg3MDA5NjkxODg5.j9BUfUvBEn8mZPOAUXtJTIWLJkdbJIhRJpMeAOcgj48g.1V3idlLYkA8DUujan9ZtVWawLR7kg7n0SPZiXGlvV4og.JPEG.thdbdlaeo/2020-04-16_11%3B59%3B07.jpg?type=w420" alt="Image 2">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzX4UQ_9qM5dRrUVdjKbS2juQ3fDKdBgAoAQ&s" alt="Image 3">
+        <img src="https://cdn.m-i.kr/news/photo/202203/906536_672684_2921.jpg" alt="Image 4">
+        <img src="https://dh.aks.ac.kr/Edu/wiki/images/thumb/1/16/%EC%84%9C%EB%93%A0%EC%96%B4%ED%83%9D.jpg/400px-%EC%84%9C%EB%93%A0%EC%96%B4%ED%83%9D.jpg" alt="Image 5">
+    </div>
+    <div id="slideshow4">
+        <img src="https://i2n.news1.kr/system/photos/2024/3/14/6533941/article.jpg" class="active" alt="Image 1">
+        <img src="https://mblogthumb-phinf.pstatic.net/MjAyMDA0MTZfMTU4/MDAxNTg3MDA5NjkxODg5.j9BUfUvBEn8mZPOAUXtJTIWLJkdbJIhRJpMeAOcgj48g.1V3idlLYkA8DUujan9ZtVWawLR7kg7n0SPZiXGlvV4og.JPEG.thdbdlaeo/2020-04-16_11%3B59%3B07.jpg?type=w420" alt="Image 2">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRzX4UQ_9qM5dRrUVdjKbS2juQ3fDKdBgAoAQ&s" alt="Image 3">
+        <img src="https://cdn.m-i.kr/news/photo/202203/906536_672684_2921.jpg" alt="Image 4">
+        <img src="https://dh.aks.ac.kr/Edu/wiki/images/thumb/1/16/%EC%84%9C%EB%93%A0%EC%96%B4%ED%83%9D.jpg/400px-%EC%84%9C%EB%93%A0%EC%96%B4%ED%83%9D.jpg" alt="Image 5">
+    </div>
+</div>
+   
     <!--<h1 id="textcolor">홈페이지</h1>-->
   <!--   <button id="showButton" onclick="showText()">상세 설명 보기</button>-->
    <!--   <button id="hideButton" onclick="hideText()">상세 설명 숨기기</button> -->
